# fletora

./: README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yaml
fletora/: __init__.py  app.py  html.py  plugins.py
samples/: main.py
tailwind/: __init__.py  utils.py
